--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -3,20 +3,20 @@ kind: Ingress
 metadata:
   name: odoo-ingress
   annotations:
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Força redirecionamento para HTTPS
 spec:
   tls:
   - hosts:
-    - hello.local
-    secretName: secret-tls 
+    - hello.local # Nome do domínio, utilizei o do exercicio passado
+    secretName: secret-tls # Secret com o certificado TLS
   rules:
-  - host: hello.local  
+  - host: hello.local
     http:
       paths:
-      - path: /
+      - path: / # Root da aplicação
         pathType: Prefix
         backend:
           service:
             name: odoo-service
             port:
-              number: 8069
+              number: 8069 # Porta onde o Odoo está exposto
